traefik namespace separate - not working - 404

--- a/homecloud/values.yaml
+++ b/homecloud/values.yaml
@@ -18,8 +18,8 @@ nitter:
     path: /
 
 traefik:
-#  ssl:
-#    insecureSkipVerify: "true"
+  ssl:
+    insecureSkipVerify: "true"
 
   api:
     dashboard: true
