--- a/homecloud/Chart.yaml
+++ b/homecloud/Chart.yaml
@@ -7,9 +7,9 @@ appVersion: "1.16.0"
 dependencies:
   - name: nitter
     version: "0.1.0"
-  - name: traefik
-    version: "9.18.2"
-    repository: "https://helm.traefik.io/traefik"
+#  - name: traefik
+#    version: "9.18.2"
+#    repository: "https://helm.traefik.io/traefik"
 #  - name: kubernetes-dashboard
 #    version: "4.0.3"
 #    repository: "https://kubernetes.github.io/dashboard/"
