set nginx ingress

--- a/homecloud/Chart.yaml
+++ b/homecloud/Chart.yaml
@@ -5,11 +5,12 @@ type: application
 version: 0.1.0
 appVersion: "1.16.0"
 dependencies:
+  - name: dns
+    version: "0.1.0"
   - name: nitter
     version: "0.1.0"
-  - name: traefik
-    version: "9.18.2"
-    repository: "https://helm.traefik.io/traefik"
+  - name: plex
+    version: "0.1.0"
 #  - name: kubernetes-dashboard
 #    version: "4.0.3"
 #    repository: "https://kubernetes.github.io/dashboard/"
