--- a/homecloud/charts/whoami/templates/ingress.yaml
+++ b/homecloud/charts/whoami/templates/ingress.yaml
@@ -1,19 +1,41 @@
-apiVersion: networking.k8s.io/v1
+{{- if .Values.ingress.enabled -}}
+{{- $fullName := include "whoami.fullname" . -}}
+{{- $svcPort := .Values.service.port -}}
+{{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
+apiVersion: networking.k8s.io/v1beta1
+{{- else -}}
+apiVersion: extensions/v1beta1
+{{- end }}
 kind: Ingress
 metadata:
+  name: {{ $fullName }}
+  labels:
+    {{- include "whoami.labels" . | nindent 4 }}
+  {{- with .Values.ingress.annotations }}
   annotations:
-    kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/rewrite-target: /\$1
-  name: apps-ingress-rules
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
+  {{- if .Values.ingress.tls }}
+  tls:
+    {{- range .Values.ingress.tls }}
+    - hosts:
+        {{- range .hosts }}
+        - {{ . | quote }}
+        {{- end }}
+      secretName: {{ .secretName }}
+    {{- end }}
+  {{- end }}
   rules:
-  - host: plex.playforthis.com
-    http:
-      paths:
-      - backend:
-          service: 
-            name: whoami
-            port: 
-              number: 80
-        path: /(.*)
-        pathType: Prefix
+    {{- range .Values.ingress.hosts }}
+    - host: {{ .host | quote }}
+      http:
+        paths:
+          {{- range .paths }}
+          - path: {{ .path }}
+            backend:
+              serviceName: {{ $fullName }}
+              servicePort: {{ $svcPort }}
+          {{- end }}
+    {{- end }}
+  {{- end }}
